--- a/plataforma.html
+++ b/plataforma.html
@@ -45,8 +45,8 @@
                                         <div class="divider"></div>
                                         <ul>
                                             <li>Realiza una carta compromiso</li>
-                                            <li>Revisión del syllabus</li>
-                                            <li>Investigación sobre metodologías ágiles</li>
+                                            <li>Debe contener lo que estás dispuesto a hacer para convertirte una mejor versión</li>
+                                            <li>Debe contener tu firma como compromiso para el trabajo de los siguientes 5 meses</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -55,8 +55,6 @@
                                         <h3>📊 Retroalimentación</h3>
                                         <div class="divider"></div>
                                         <ul>
-                                            <li>Consejo: Revisa los apuntes de la clase anterior</li>
-                                            <li>Recuerda: La entrega del primer trabajo es el viernes</li>
                                             <li>Sugerencia: Organiza tu tiempo de estudio</li>
                                         </ul>
                                     </div>
